Werkzeug Changelog
==================

Version 0.9.3
-------------

(bugfix release, release date to be decided)

Version 0.9.2
-------------

(bugfix release, released on July 18th 2013)

- Added `unsafe` parameter to :func:`~werkzeug.urls.url_quote`.
- Fixed an issue with :func:`~werkzeug.urls.url_quote_plus` not quoting
  `'+'` correctly.
- Ported remaining parts of :class:`~werkzeug.contrib.RedisCache` to
  Python 3.3.
- Ported remaining parts of :class:`~werkzeug.contrib.MemcachedCache` to
  Python 3.3
- Fixed a deprecation warning in the contrib atom module.
- Fixed a regression with setting of content types through the
  headers dictionary instead with the content type parameter.
- Use correct name for stdlib secure string comparision function.
- Fixed a wrong reference in the docstring of
  :func:`~werkzeug.local.release_local`.
- Fixed an `AttributeError` that sometimes occurred when accessing the
  :attr:`werkzeug.wrappers.BaseResponse.is_streamed` attribute.


Version 0.9.1
-------------

(bugfix release, released on June 14th 2013)

- Fixed an issue with integers no longer being accepted in certain
  parts of the routing system or URL quoting functions.
- Fixed an issue with `url_quote` not producing the right escape
  codes for single digit codepoints.
- Fixed an issue with :class:`~werkzeug.wsgi.SharedDataMiddleware` not
  reading the path correctly and breaking on etag generation in some
  cases.
- Properly handle `Expect: 100-continue` in the development server
  to resolve issues with curl.
- Automatically exhaust the input stream on request close.  This should
  fix issues where not touching request files results in a timeout.
- Fixed exhausting of streams not doing anything if a non-limited
  stream was passed into the multipart parser.
- Raised the buffer sizes for the multipart parser.

Version 0.9
-----------

Released on June 13nd 2013, codename Planierraupe.

- Added support for :meth:`~werkzeug.wsgi.LimitedStream.tell`